@@ -1460,11 +1460,24 @@ sitemap.engineurls = http://www.google.com/webmasters/sitemaps/ping?sitemap=
 # org.dspace.content.authority.SHERPARoMEOPublisher = SRPublisher, \
 # org.dspace.content.authority.SHERPARoMEOJournalTitle = SRJournalTitle
 
-## This ChoiceAuthority plugin is automatically configured with every
+## The DCInputAuthority plugin is automatically configured with every
 ## value-pairs element in input-forms.xml, namely:
 ##   common_identifiers, common_types, common_iso_languages
+##
+## The DSpaceControlledVocabulary plugin is automatically configured
+## with every *.xml file in [dspace]/config/controlled-vocabularies,
+## and creates a plugin instance for each, using base filename as the name.
+## eg: nsi, srsc.
+## Each DSpaceControlledVocabulary plugin comes with three configuration options:
+# vocabulary.plugin._plugin_.hierarchy.store = <true|false>    # default: true
+# vocabulary.plugin._plugin_.hierarchy.suggest = <true|false>  # default: true
+# vocabulary.plugin._plugin_.delimiter = "<string>"            # default: "::"
+##
+## An example using "srsc" can be found later in this section
+
 #plugin.selfnamed.org.dspace.content.authority.ChoiceAuthority = \
-# org.dspace.content.authority.DCInputAuthority
+# org.dspace.content.authority.DCInputAuthority, \
+# org.dspace.content.authority.DSpaceControlledVocabulary
 
 ## configure LC Names plugin
 #lcname.url = http://alcme.oclc.org/srw/search/lcnaf
@@ -1497,6 +1510,13 @@ authority.minconfidence = ambiguous
 ## keyword from the same set as for the default "authority.minconfidence"
 #authority.minconfidence.dc.contributor.author = accepted
 
+## demo: subject code autocomplete, using srsc as authority
+## (DSpaceControlledVocabulary plugin must be enabled)
+#choices.plugin.dc.subject = srsc
+#choices.presentation.dc.subject = select
+#vocabulary.plugin.srsc.hierarchy.store = true
+#vocabulary.plugin.srsc.hierarchy.suggest = true
+#vocabulary.plugin.srsc.delimiter = "::"
 
 ## Demo: publisher name lookup through SHERPA/RoMEO:
 #choices.plugin.dc.publisher = SRPublisher
@@ -1508,12 +1528,12 @@ authority.minconfidence = ambiguous
 #authority.controlled.dc.title.alternative = true
 
 ## demo: use choice authority (without authority-control) to restrict dc.type on EditItemMetadata page
-# choices.plugin.dc.type = common_types
-# choices.presentation.dc.type = select
+#choices.plugin.dc.type = common_types
+#choices.presentation.dc.type = select
 
 ## demo: same idea for dc.language.iso
-# choices.plugin.dc.language.iso = common_iso_languages
-# choices.presentation.dc.language.iso = select
+#choices.plugin.dc.language.iso = common_iso_languages
+#choices.presentation.dc.language.iso = select
 
 # Change number of choices shown in the select in Choices lookup popup
 #xmlui.lookup.select.size = 12
