@@ -1,5 +1,8 @@
 1.7.0
 =====
+(Michael B. Klein)
+- [DS-699] ChoiceAuthority plugin for old-style controlled vocabularies
+
 (Andrea Bollini)
 - [DS-585] The Content Disposition configuration is ignored by unpublished items
 
